--- a/sentimentIt/vignettes/certifications.Rmd
+++ b/sentimentIt/vignettes/certifications.Rmd
@@ -109,3 +109,9 @@ revokeCert(email = "johndoe@school.edu", password = "12345",
 ### Output
 
 The `revokeCert()` function outputs a character vector indicating how many certifications were successfully revoked from workers and how many revocations were unsuccessful.
+
+Reference Paper
+------
+
+CARLSON, D., & MONTGOMERY, J. (2017). A Pairwise Comparison Framework for Fast, Flexible, and Reliable Human Coding of Political Texts. <i>American Political Science Review,</i> <i>111</i>(4), 835-843. doi:10.1017/S0003055417000302
+
